<resources>
    <string name="app_name">Chat</string>
    <string name="call_end_description">Image of end call button</string>
    <string name="call_avatar_description">Image of call receiver avatar</string>
    <string name="call_mic_description">Image of microphone silenced button</string>
    <string name="call_cam_description">Image of camera off button</string>
    <string name="call_calling_default">Calling…</string>
    <string name="bg_description">Background image</string>
    <string name="chats_chats_description">Image of chats icon</string>
    <string name="chats_more_description">Image of more icon</string>
    <string name="chat_back_description">Image of back button</string>
    <string name="chat_avatar_description">Image of receiver avatar</string>
    <string name="chat_call_description">Image of call button</string>
    <string name="chat_send_description">Image of send button</string>
    <string name="receiver_default">Receiver</string>
    <string name="chat_activity_default">Activity</string>
    <string name="message_hint_default">Message…</string>
    <string name="settings_save_description">Image of save button</string>
    <string name="settings_bg_description">Image of selected bg</string>
    <string name="settings_add_description">Image of add chat button</string>
    <string name="settings_editor_default">Editor</string>
    <string name="settings_name_default">Chat name: </string>
    <string name="settings_name_hint_default">Chat name…</string>
    <string name="settings_primary_theme_default">Color theme: </string>
    <string name="settings_primary_color_default">Primary color: </string>
    <string name="settings_secondary_theme_default">Secondary theme: </string>
    <string name="settings_secondary_color_default">Secondary color: </string>
    <string name="settings_bg_color_default">Background color: </string>
    <string name="settings_bg_image_default">Background image: </string>
    <string name="settings_bg_select_default">select</string>
    <string name="settings_color_hint_default">#color code</string>
    <string name="l_chat_avatar_description">Image of receiver avatar</string>
    <string name="l_chat_enter_description">Image of enter button</string>
    <string name="l_message_avatar_description">Image of receiver avatar</string>
    <string name="l_message_x_description">Image of delete button</string>
    <string name="l_message_whose_description">Image of whose arrow</string>
    <string name="l_message_default">Message content</string>
    <string name="l_message_read_default">Is the message read? </string>
    <string name="l_delayed_default">Delay in seconds: </string>
    <string name="l_delayed_value_default">0.0</string>
    <string name="l_setting_avatar_description">Image of chat avatar</string>
    <string name="l_setting_x_description">Image of chat avatar</string>
    <string name="l_setting_add_description">Image of add button</string>
    <string name="l_setting_name_hint_default">Name…</string>
    <string name="l_setting_read_default">Is Read: </string>
    <string name="l_setting_activity_default">Activity: </string>
    <string name="l_setting_activity_hint_default">online, 15m ago, offline…</string>
    <string name="l_setting_delayed_default">Delayed messages:</string>
</resources>