<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewSettingAvatar"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/l_setting_avatar_description" />

        <EditText
            android:id="@+id/editTextSettingReceiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/l_setting_name_hint_default"
            android:inputType="text|textPersonName"
            android:textSize="34sp"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/imageButtonDeleteChat"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="3sp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/x"
            android:contentDescription="@string/l_setting_x_description" />

    </LinearLayout>

    <Switch
        android:id="@+id/switchIsRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_setting_read_default"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewSettingActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_setting_activity_default"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/l_setting_activity_hint_default"
            android:inputType="text|textShortMessage"
            android:autofillHints="" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSettingMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/imageButtonAddMessage"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/newchat"
        android:contentDescription="@string/l_setting_add_description" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l_setting_delayed_default"
        android:textColor="#000000"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSettingDelayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/imageButtonAddDelayed"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/newdelay"
        android:contentDescription="@string/l_setting_add_description" />

</LinearLayout>