<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSettingDelayedMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/message_bubble_received"
            android:ems="10"
            android:hint="@string/message_hint_default"
            android:inputType="text|textShortMessage"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="0sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/imageButtonDeleteDelayed"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="1sp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/x"
            android:contentDescription="@string/l_message_x_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_delayed_default"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/l_delayed_value_default"
            android:autofillHints="" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>