<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSettingMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/message_bubble_received"
            android:ems="10"
            android:hint="@string/message_hint_default"
            android:inputType="text|textShortMessage"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="0sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/imageButtonDeleteMessage"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="1sp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/x"
            android:contentDescription="@string/l_message_x_description" />
    </LinearLayout>

    <Switch
        android:id="@+id/switchRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_message_read_default"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewReceived"
            android:layout_width="30sp"
            android:layout_height="30sp"
            app:srcCompat="@drawable/enterarrow"
            android:contentDescription="@string/l_message_whose_description" />

        <Switch
            android:id="@+id/switchWhoseMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/imageViewSent"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:rotationY="180"
            app:srcCompat="@drawable/enterarrow"
            android:contentDescription="@string/l_message_whose_description" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>